--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.8",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
     "expo-splash-screen": "~0.27.5",
@@ -44,7 +44,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^1.6.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
