--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.14",
+    "expo-av": "~14.0.6",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.8",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
     "expo-splash-screen": "~0.27.5",
@@ -44,8 +46,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^1.6.1",
-    "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.7"
+    "react-native-video": "^6.4.2",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
