--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "AzurePassage",
-    "slug": "AzurePassage",
+    "name": "GlamCart",
+    "slug": "GlamCart",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/favicon.png",
