--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^5.1.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
